# depys

./: LICENSE  pyproject.toml
.github/workflows/: github-actions.yml
depys/: acompynent.py  app.py  utils.py
depys/a_sync/: __init__.py  get_ip.py
depys/old/: depys_old.py  ip_old.py
depys/sync/: get_ip.py
tests/: conftest.py  test_depys.py
