[tool.poetry]
name = "depys"
version = "0.1.0"
description = "Data-driven runtime dependency management for Python."
authors = ["Wes Payne <noblepayne@noblepayne.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
compynent = "^1.0.1"
httpx = "^0.22.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
